--- a/notebooks/spark programming overview.ipynb
+++ b/notebooks/spark programming overview.ipynb
@@ -32,7 +32,7 @@
     "spark = (SparkSession\n",
     "         .builder\n",
     "         .appName(\"spark-programming-overview\")\n",
-    "         .master(\"spark://spark-master:7077\")\n",
+    "         .master(\"local[*]\")\n",
     "         .config(\"spark.executor.memory\", \"1024m\")\n",
     "         .getOrCreate())"
    ]
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = spark.read.csv(\"./data/co-est2019-alldata.csv\", header=True)"
+    "df = spark.read.csv(\"../data/co-est2019-alldata.csv\", header=True)"
    ]
   },
   {
